@@ -24,11 +24,14 @@ import org.apache.hadoop.hbase.HConstants;
 import org.apache.hadoop.hbase.KeyValue;
 import org.apache.hadoop.hbase.util.Bytes;
 import org.apache.hadoop.io.Writable;
+import org.apache.hadoop.io.WritableUtils;
 
 import java.io.DataInput;
 import java.io.DataOutput;
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.TreeMap;
@@ -66,7 +69,7 @@ import java.util.TreeMap;
  * timestamp.  The constructor timestamp is not referenced.
  */
 public class Delete implements Writable, Row, Comparable<Row> {
-  private static final byte DELETE_VERSION = (byte)1;
+  private static final byte DELETE_VERSION = (byte)2;
 
   private byte [] row = null;
   // This ts is only used when doing a deleteRow.  Anything less,
@@ -74,6 +77,9 @@ public class Delete implements Writable, Row, Comparable<Row> {
   private long lockId = -1L;
   private final Map<byte [], List<KeyValue>> familyMap =
     new TreeMap<byte [], List<KeyValue>>(Bytes.BYTES_COMPARATOR);
+
+  // a opaque blob that can be passed into a Delete. 
+  private Map<String, byte[]> attributes;
 
   /** Constructor for Writable.  DO NOT USE */
   public Delete() {
@@ -284,6 +290,54 @@ public class Delete implements Writable, Row, Comparable<Row> {
   }
 
   /**
+   * Sets arbitrary delete's attribute.
+   * In case value = null attribute is removed from the attributes map.
+   * @param name attribute name
+   * @param value attribute value
+   */
+  public void setAttribute(String name, byte[] value) {
+    if (attributes == null && value == null) {
+      return;
+    }
+
+    if (attributes == null) {
+      attributes = new HashMap<String, byte[]>();
+    }
+
+    if (value == null) {
+      attributes.remove(name);
+      if (attributes.isEmpty()) {
+        this.attributes = null;
+      }
+    } else {
+      attributes.put(name, value);
+    }
+  }
+
+  /**
+   * Gets put's attribute
+   * @param name attribute name
+   * @return attribute value if attribute is set, <tt>null</tt> otherwise
+   */
+  public byte[] getAttribute(String name) {
+    if (attributes == null) {
+      return null;
+    }
+    return attributes.get(name);
+  }
+
+  /**
+   * Gets all scan's attributes
+   * @return unmodifiable map of all attributes
+   */
+  public Map<String, byte[]> getAttributesMap() {
+    if (attributes == null) {
+      return Collections.emptyMap();
+    }
+    return Collections.unmodifiableMap(attributes);
+  }
+
+  /**
    * @return string
    */
   @Override
@@ -341,6 +395,17 @@ public class Delete implements Writable, Row, Comparable<Row> {
       }
       this.familyMap.put(family, list);
     }
+    if (version > 1) {
+      int numAttributes = in.readInt();
+      if (numAttributes > 0) {
+        this.attributes = new HashMap<String, byte[]>();
+        for(int i=0; i<numAttributes; i++) {
+          String name = WritableUtils.readString(in);
+          byte[] value = Bytes.readByteArray(in);
+          this.attributes.put(name, value);
+        }
+      }
+    }
   }
 
   public void write(final DataOutput out) throws IOException {
@@ -355,6 +420,15 @@ public class Delete implements Writable, Row, Comparable<Row> {
       out.writeInt(list.size());
       for(KeyValue kv : list) {
         kv.write(out);
+      }
+    }
+    if (this.attributes == null) {
+      out.writeInt(0);
+    } else {
+      out.writeInt(this.attributes.size());
+      for (Map.Entry<String, byte[]> attr : this.attributes.entrySet()) {
+        WritableUtils.writeString(out, attr.getKey());
+        Bytes.writeByteArray(out, attr.getValue());
       }
     }
   }
@@ -386,6 +460,4 @@ public class Delete implements Writable, Row, Comparable<Row> {
     this.deleteColumn(parts[0], parts[1], HConstants.LATEST_TIMESTAMP);
     return this;
   }
-
-
 }
