@@ -232,6 +232,7 @@ Release 0.91.0 - Unreleased
    HBASE-3841  HTable and HTableInterface docs are inconsistent with
                one another (Harsh J Chouraria)
    HBASE-2937  Facilitate Timeouts In HBase Client (Karthick Sankarachary)
+   HBASE-3921  Allow adding arbitrary blobs to Put (dhruba borthakur)
 
   TASKS
    HBASE-3559  Move report of split to master OFF the heartbeat channel
